--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,18 +1,10 @@
-{% include 'recipes/partials/head.html' %}
-<body>
-    {% include 'recipes/partials/header.html' %}
-    {% include 'recipes/partials/search.html' %}
+{% extends 'global/base.html' %}
 
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
-
-            <div class="recipe recipe-list-item">
-                <div class="recipe-cover">
-                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="Temporário">
-                </div>
-                <h1>Oi</h1>
-            </div>
-        </div>
-    </main>
-</body>
-</html>
+{% block content %}
+<div class="main-content main-content-list container">
+    {% for recipe in recipes  %}
+        {% include 'recipes/partials/recipe.html' %}
+     
+    {% endfor %}
+</div>
+{% endblock content %}
