--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -3,7 +3,7 @@
     <div class="main-header container">
         <h1>
             <a href="/">
-                <a class="main-logo" href="/">
+                <a class="main-logo" href="{% url 'recipes:home' %}">
                     <i class="fas fa-utensils main-logo-icon"></i>
                     <span class="main-logo-text">Recipes</span>
                 </a>
